methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  	var vuVert: Boolean = false
  	if (estFaceMur()==false) {
      forward();
      if (getCouleurSol()==Color.green) {
        Vuvert=true
      } else {
        vuVert = false
      }
    } else {
      vuVert = false
    }
  	return vuVert
}

